--- a/src/requirements/nginx/Dockerfile
+++ b/src/requirements/nginx/Dockerfile
@@ -8,16 +8,30 @@ ENV DEBIAN_FRONTEND=noninteractive
 RUN apt update && \
     apt install -y nginx && \
     apt install -y openssl && \
+    apt install -y vim && \
     apt clean
 
+RUN mkdir -p /etc/nginx/ssl
+
+RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
+    -keyout /etc/nginx/ssl/nginx.key \
+    -out /etc/nginx/ssl/nginx.crt \
+    -subj "/C=US/ST=State/L=City/O=Example/CN=localhost"
+
+# COPY script.sh /script.sh
+
+# RUN chmod +x /script.sh
 # Copy custom NGINX configuration
 COPY nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 443
+# EXPOSE 80
+
 
 # Start NGINX in the foreground
 CMD ["nginx", "-g", "daemon off;"]
 
+# CMD ["bash"]
 
 
 # Update the package list and install NGINX
