--- a/src/requirements/nginx/nginx.conf
+++ b/src/requirements/nginx/nginx.conf
@@ -1,43 +1,33 @@
-user www-data; # Specifies the user under which NGINX worker processes run 
-worker_processes auto; # Defines the number of worker processes with the number of CPU cores
-pid /run/nginx.pid; # Specifies the location of the file that stores the Process ID (PID) of the main NGINX process.
-include /etc/nginx/modules-enabled/*.conf; 
+user www-data; # without this line, nginx define user nobody or root by default
+worker_processes auto; # without this line, worker_processes is 1 by default but with auto, is the number of CPU cores available
+# pid /run/nginx.pid; the pid of init process of nginx is stored in /run/nginx.pid and is used to stop the process and manage the process
 
 events {
     worker_connections 768; # The total number of connections = worker_processes * worker_connections.
 }
 
 http {
-    sendfile on; # Enables the efficient transfer of files directly between the file system and the network (zero-copy).
-    tcp_nopush on; # Optimizes the way NGINX sends data packets over the network, reducing overhead.
-    keepalive_timeout 65; # Sets the maximum time between requests when the client can keep the connection open.
-    # types_hash_max_size 2048; # Increases the size of the hash table used for MIME types.
-    include /etc/nginx/mime.types; # Includes the file that maps file name extensions to MIME types.
-    default_type application/octet-stream; # Sets the default MIME type.
-
+    include /etc/nginx/mime.types; 
     server {
-        listen 80;
+        listen 443 ssl;
         server_name localhost;
 
-        root /var/www/html;
-        index index.php index.html;
+        ssl_certificate /etc/nginx/ssl/nginx.crt;
+        ssl_certificate_key /etc/nginx/ssl/nginx.key;
+        ssl_protocols TLSv1.2 TLSv1.3;
 
-        location / {
-            try_files $uri $uri/ /index.php$is_args$args;
-        }
+        root /var/www/html; # why we need to define root? The root directive specifies the root directory that NGINX should use to search for files.
+        index index.php index.html; # The index directive defines the default file that NGINX should serve when a directory is requested.
+
         location ~ \.php$ {
-            include fastcgi_params;
+            include fastcgi_params; 
             fastcgi_pass wordpress:9000;
-            fastcgi_index index.php;  # Only one definition is needed
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        }
-
-
-        location ~ /\.ht {
-            deny all;
-        }
-
-        error_log /var/log/nginx/error.log;
-        access_log /var/log/nginx/access.log;
+        
+            # fastcgi_param : The fastcgi_param directive is used to set the value of a parameter that is passed to the FastCGI server.
+            # SCRIPT_FILENAME : directive full file path of the script to process the request 
+            # $document_root : The $document_root variable is used to specify the root directory of the current request, example /var/www/html
+            # $fastcgi_script_name : The $fastcgi_script_name variable is used to specify the URI of the current request, example /index.php
+        }   
     }
 }
