--- a/src/requirements/nginx/nginx.conf
+++ b/src/requirements/nginx/nginx.conf
@@ -21,7 +21,7 @@ http {
 
         location ~ \.php$ {
             include fastcgi_params; 
-            fastcgi_pass wordpress:9000;
+            fastcgi_pass wordpress_42:9000;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         
             # fastcgi_param : The fastcgi_param directive is used to set the value of a parameter that is passed to the FastCGI server.
