--- a/src/Docker-compose.yml
+++ b/src/Docker-compose.yml
@@ -22,20 +22,6 @@ services:
       - wordpress-network
     restart: always
 
-# redis service :
-  redis:
-    container_name: redis
-    image: redis
-    build: 
-      context: ./bonus/redis
-      dockerfile: Dockerfile
-    ports:
-      - "6379:6379"
-    networks:
-      - wordpress-network
-    restart: always
-    depends_on:
-      - mariadb
 
 
 # wordpress service :
@@ -52,12 +38,47 @@ services:
       WORDPRESS_DB_NAME: ${MARIADB_DATABASE}
     volumes:
       - wordpress-data:/var/www/html
-      - monitor-logs:/var/log
     networks:
       - wordpress-network
     depends_on:
       - mariadb
     restart: always
+
+# nginx service :
+  nginx:
+    container_name: nginx
+    image: nginx
+    build:
+      context: ./requirements/nginx
+      dockerfile: Dockerfile
+    ports:
+      - "443:443"
+      - "8080:80"
+    networks:
+      - wordpress-network
+    volumes:
+      - wordpress-data:/var/www/html
+    depends_on:
+      - wordpress
+    restart: always
+
+
+
+
+# redis service :
+  redis:
+    container_name: redis
+    image: redis
+    build: 
+      context: ./bonus/redis
+      dockerfile: Dockerfile
+    ports:
+      - "6379:6379"
+    networks:
+      - wordpress-network
+    restart: always
+    depends_on:
+      - mariadb
 
 # ftp service :
   ftp:
@@ -67,7 +88,7 @@ services:
       context: ./bonus/ftp
       dockerfile: Dockerfile
     volumes:
-      - wordpress-data:/var/www/html
+      - wordpress-data:/var/ftp
     ports:
       - "21:21"
       - "30000-30009:30000-30009"
@@ -94,51 +115,43 @@ services:
       - mariadb
       - wordpress
   
-
-# nginx service :
-  nginx:
-    container_name: nginx
-    image: nginx
+# Add Portainer service here
+  portainer:
+    container_name: portainer
+    image: portainer
     build:
-      context: ./requirements/nginx
+      context: ./bonus/portainer
       dockerfile: Dockerfile
+    restart: always
     ports:
-      - "443:443"
-      - "8080:80"
-    networks:
-      - wordpress-network
+      - "9001:9000"  # Expose the Portainer UI on port 9000
     volumes:
-      - wordpress-data:/var/www/html
-    depends_on:
-      - wordpress
-    restart: always
-  
-  website-monitor:
-    container_name: website-monitor
-    build:
-      context: ./bonus/status
-      dockerfile: Dockerfile
-    volumes:
-      - monitor-logs:/var/log
+      - /var/run/docker.sock:/var/run/docker.sock  # Allow Portainer to interact with Docker
+      - portainer_data:/data  # Store Portainer's data persistently
     networks:
-      - wordpress-network
+      - wordpress-network  # Attach Portainer to the same network
     depends_on:
-      - nginx
-    restart: always
+      - mariadb  # Ensure Portainer is started after MariaDB (optional)
+
   
 volumes:
   mariadb-data:
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/aghounam/data/mariadb
+      o: bind
   wordpress-data:
-  monitor-logs:
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/aghounam/data/wordpress
+      o: bind
+  portainer_data:
+
 
 
 networks:
   wordpress-network:
     driver: bridge
-  
-# driver: local
-# driver_opts:
-#   type: none
-#   device: /home/aghounam/data/wordpress
-#   o: bind
 
