--- a/src/bonus/ftp/vsftpd.conf
+++ b/src/bonus/ftp/vsftpd.conf
@@ -1,17 +1,6 @@
 listen=YES
-listen_ipv6=NO
-anonymous_enable=NO
 local_enable=YES
-write_enable=YES
-local_umask=022
-dirmessage_enable=YES
-use_localtime=YES
-xferlog_enable=YES
-xferlog_std_format=YES
-ftpd_banner=Welcome to the FTP server.
-chroot_local_user=YES
-allow_writeable_chroot=YES
+pasv_address=ftp
 pasv_enable=YES
-pasv_min_port=21000
-pasv_max_port=21010
-pasv_address=127.0.0.1
+pasv_min_port=10000
+pasv_max_port=10100
