--- a/src/Docker-compose.yml
+++ b/src/Docker-compose.yml
@@ -89,9 +89,10 @@ services:
       dockerfile: Dockerfile
     volumes:
       - wordpress-data:/var/ftp
+      - wordpress-data:/var/www/html
     ports:
       - "21:21"
-      - "30000-30009:30000-30009"
+      - "10000-10100:10000-10100"
     networks:
       - wordpress-network
     restart: always
@@ -107,7 +108,7 @@ services:
       context: ./bonus/adminer
       dockerfile: Dockerfile
     ports:
-      - "8081:8080"
+      - "1010:8080"
     networks:
       - wordpress-network
     restart: always
@@ -115,39 +116,55 @@ services:
       - mariadb
       - wordpress
   
-# Add Portainer service here
-  portainer:
-    container_name: portainer
-    image: portainer
-    build:
-      context: ./bonus/portainer
-      dockerfile: Dockerfile
-    restart: always
-    ports:
-      - "9001:9000"  # Expose the Portainer UI on port 9000
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock  # Allow Portainer to interact with Docker
-      - portainer_data:/data  # Store Portainer's data persistently
-    networks:
-      - wordpress-network  # Attach Portainer to the same network
-    depends_on:
-      - mariadb  # Ensure Portainer is started after MariaDB (optional)
+# # Add Portainer service here
+#   portainer:
+#     container_name: portainer
+#     image: portainer
+#     build:
+#       context: ./bonus/portainer
+#       dockerfile: Dockerfile
+#     restart: always
+#     ports:
+#       - "2020:9000"  # Expose the Portainer UI on port 9000
+#     volumes:
+#       - /var/run/docker.sock:/var/run/docker.sock  # Allow Portainer to interact with Docker
+#       - portainer_data:/data  # Store Portainer's data persistently
+#     networks:
+#       - wordpress-network  # Attach Portainer to the same network
+#     depends_on:
+#       - mariadb  # Ensure Portainer is started after MariaDB (optional)
 
-  
+# # website
+#   website:
+#     container_name: website
+#     image: website
+#     build:
+#       context: ./bonus/website
+#       dockerfile: Dockerfile
+#     ports:
+#       - "3030:9090"
+#     networks:
+#       - wordpress-network
+#     volumes:
+#       - wordpress-data:/var/www/html
+#     restart: "always"
+#     depends_on:
+#       - nginx
+
 volumes:
   mariadb-data:
-    driver: local
-    driver_opts:
-      type: none
-      device: /home/aghounam/data/mariadb
-      o: bind
+    # driver: local
+    # driver_opts:
+    #   type: none
+    #   device: /home/aghounam/data/mariadb
+    #   o: bind
   wordpress-data:
-    driver: local
-    driver_opts:
-      type: none
-      device: /home/aghounam/data/wordpress
-      o: bind
-  portainer_data:
+    # driver: local
+    # driver_opts:
+    #   type: none
+    #   device: /home/aghounam/data/wordpress
+    #   o: bind
+  # portainer_data:
 
 
 
