--- a/src/.env
+++ b/src/.env
@@ -1,7 +1,7 @@
-MARIADB_ROOT_PASSWORD=your_password
-MARIADB_DATABASE=your_database
-MARIADB_USER=your_user
-MARIADB_PASSWORD=your_password
+MARIADB_ROOT_PASSWORD=password
+MARIADB_DATABASE=database
+MARIADB_USER=user
+MARIADB_PASSWORD=password
 
 
 USER=aghounam
