--- a/src/.env
+++ b/src/.env
@@ -1,7 +1,7 @@
-MARIADB_ROOT_PASSWORD=password
-MARIADB_DATABASE=database
-MARIADB_USER=user
-MARIADB_PASSWORD=password
+MARIADB_ROOT_PASSWORD=my_password
+MARIADB_DATABASE=my_database
+MARIADB_USER=my_user
+MARIADB_PASSWORD=my_password
 
 
 USER=aghounam
