--- a/src/Docker-compose.yml
+++ b/src/Docker-compose.yml
@@ -155,29 +155,29 @@ services:
 
 volumes:
   mariadb-data:
-    # driver: local
-    # driver_opts:
-    #   type: none
-    #   device: /home/aghounam/data/mariadb
-    #   o: bind
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/aghounam/data/mariadb
+      o: bind
   wordpress-data:
-    # driver: local
-    # driver_opts:
-    #   type: none
-    #   device: /home/aghounam/data/wordpress
-    #   o: bind
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/aghounam/data/wordpress
+      o: bind
   portainer_data:
-    # driver: local
-    # driver_opts:
-    #   type: none
-    #   device: /home/aghounam/data/portainer
-    #   o: bind
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/aghounam/data/portainer
+      o: bind
   adminer_data:
-    # driver: local
-    # driver_opts:
-    #   type: none
-    #   device: /home/aghounam/data/adminer
-    #   o: bind
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/aghounam/data/adminer
+      o: bind
 
 
 
