--- a/src/requirements/bonus/redis/Dockerfile
+++ b/src/requirements/bonus/redis/Dockerfile
@@ -4,12 +4,7 @@ FROM debian:11
 # Install Redis and necessary dependencies
 RUN apt-get update && apt-get install -y \
     redis && \ 
-    apt install -y php-redis && \
-    rm -rf /var/lib/apt/lists/*
-
-# Copy custom Redis configuration (if needed)
-COPY redis.conf /etc/redis/redis.conf
-
+    apt install -y php-redis
 # Expose the Redis default port
 EXPOSE 6379
 
