--- a/src/requirements/mariadb/Dockerfile
+++ b/src/requirements/mariadb/Dockerfile
@@ -10,15 +10,13 @@ RUN apt-get update && \
     && apt-get clean
 
 # Copy the MariaDB script to initialize the database
-COPY init-mariadb.sh /var/run/init-mariadb.sh
+COPY tools/init-mariadb.sh /init-mariadb.sh
 
-RUN chmod +x /var/run/init-mariadb.sh
+RUN chmod +x /init-mariadb.sh
 
 # Expose MariaDB port (default: 3306)
 EXPOSE 3306
 
-
-
 # Start MariaDB server on container startup
 
-CMD ["/var/run/init-mariadb.sh"]
+CMD ["/init-mariadb.sh"]
