--- a/src/requirements/nginx/conf/nginx.conf
+++ b/src/requirements/nginx/conf/nginx.conf
@@ -6,22 +6,22 @@ events {
 }
 
 http {
-    include /etc/nginx/mime.types; 
+    include /etc/nginx/mime.types;
     server {
         listen 443 ssl;
         server_name localhost;
 
         ssl_certificate /etc/nginx/ssl/nginx.crt;
         ssl_certificate_key /etc/nginx/ssl/nginx.key;
-        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_protocols TLSv1.2 ;
     
         root /var/www/html; # why we need to define root? The root directive specifies the root directory that NGINX should use to search for files.
-        index index.php index.html; # The index directive defines the default file that NGINX should serve when a directory is requested.
-
+        index index.php ; # The index directive defines the default file that NGINX should serve when a directory is requested.
+        
         location ~ \.php$ {
-            include fastcgi_params; 
-            fastcgi_pass wordpress:9000;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            include fastcgi_params;  # The include directive is used to include the contents of a file in the configuration file.
+            fastcgi_pass wordpress:9000; # The fastcgi_pass directive is used to specify the FastCGI server that will process the request.
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;  
         
             # fastcgi_param : The fastcgi_param directive is used to set the value of a parameter that is passed to the FastCGI server.
             # SCRIPT_FILENAME : directive full file path of the script to process the request 
