--- a/src/requirements/bonus/portainer/Dockerfile
+++ b/src/requirements/bonus/portainer/Dockerfile
@@ -1,7 +1,11 @@
-FROM debian:bullseye
+FROM debian:11
 RUN apt update && apt install -y wget curl
+
+# /opt is the optional directory where the software will be installed
+RUN mkdir -p /opt
+
 RUN wget https://github.com/portainer/portainer/releases/download/2.25.1/portainer-2.25.1-linux-amd64.tar.gz -P /opt
-RUN tar -xvf /opt/portainer-2.25.1-linux-amd64.tar.gz -C /opt
+RUN tar -xvf /opt/portainer-2.25.1-linux-amd64.tar.gz -C /opt 
 RUN rm -rf /opt/portainer-2.25.1-linux-amd64.tar.gz
 COPY script.sh /usr/bin/script.sh
 EXPOSE 9001
