--- a/src/requirements/nginx/conf/nginx.conf
+++ b/src/requirements/nginx/conf/nginx.conf
@@ -1,8 +1,7 @@
-user www-data; # without this line, nginx define user nobody or root by default
-worker_processes auto; # without this line, worker_processes is 1 by default but with auto, is the number of CPU cores available
-
+user www-data;
+worker_processes auto;
 events {
-    worker_connections 768; # The total number of connections = worker_processes * worker_connections.
+    worker_connections 768;
 }
 
 http {
@@ -15,18 +14,14 @@ http {
         ssl_certificate_key /etc/nginx/ssl/nginx.key;
         ssl_protocols TLSv1.2 ;
     
-        root /var/www/html; # why we need to define root? The root directive specifies the root directory that NGINX should use to search for files.
-        index index.php ; # The index directive defines the default file that NGINX should serve when a directory is requested.
-        
+        root /var/www/html;
+        index index.php ;
+
+
         location ~ \.php$ {
-            include fastcgi_params;  # The include directive is used to include the contents of a file in the configuration file.
-            fastcgi_pass wordpress:9000; # The fastcgi_pass directive is used to specify the FastCGI server that will process the request.
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;  
-        
-            # fastcgi_param : The fastcgi_param directive is used to set the value of a parameter that is passed to the FastCGI server.
-            # SCRIPT_FILENAME : directive full file path of the script to process the request 
-            # $document_root : The $document_root variable is used to specify the root directory of the current request, example /var/www/html
-            # $fastcgi_script_name : The $fastcgi_script_name variable is used to specify the URI of the current request, example /index.php
-        }   
+            include fastcgi_params;
+            fastcgi_pass wordpress:9000;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        }
     }
 }
